--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
 
+after_success:
+- bash <(curl -s https://codecov.io/bash)
